--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+:root {
+  --main-color: white
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	font-size: 62.5%;
+}
+
+body {
+	min-height: 100vh;
+	font-family: 'Montserrat', sans-serif;
+  font-size: 1.6rem;
+  background-color: rgb(41, 41, 41);
+}
+
+.App {
+	display: grid;
+  place-items: center;
+	height: 100vh;
+	width: 100%;
+	margin: auto;
+  font-size: 2rem;
+}
+
+.container {
+  max-width: 35rem;
+}
+
+.color-box {
+  width: 30rem;
+  height: 30rem;
+  background: white;
+  margin-bottom: 10rem;
+  display: grid;
+  place-items: center;
+}
+
+input {
+    font-family: sans-serif;
+    padding: 20px 20px;
+    border: .3rem solid var(--main-color);
+    color: black;
+    text-indent: 15px;
+    border-radius: 10px;
+    outline: none;
+    font-size: 2rem;
+    letter-spacing: 3px;
+    transition: .3s;
+    width: 100%;
+}
+
+input:focus {
+    padding: 25px 25px;
+    box-shadow: 0 0 5px var(--main-color),
+                0 0 25px var(--main-color);
+    border: 1px solid var(--main-color);
+}
+
+input::placeholder {
+    color: grey;
 }
